--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -3,15 +3,17 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="703.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.ImageViewerWindowController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="703.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.ImageViewerWindowController">
     <top>
         <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="1091.0" BorderPane.alignment="CENTER">
             <children>
-                <ButtonBar prefHeight="57.0" prefWidth="388.0">
+                <ButtonBar prefHeight="57.0" prefWidth="727.0">
                     <buttons>
                         <Button id="btnLoad" fx:id="btnLoad" mnemonicParsing="false" onAction="#handleBtnLoadAction" prefHeight="27.0" prefWidth="141.0" text="Load images...">
                             <opaqueInsets>
@@ -24,6 +26,16 @@
                             </opaqueInsets>
                         </Button>
                         <Button id="btnNext" fx:id="btnNext" mnemonicParsing="false" onAction="#handleBtnNextAction" text="Next" />
+                  <Button id="btnLoad" fx:id="btnStart" mnemonicParsing="false" onAction="#handleBtnStartAction" prefHeight="27.0" prefWidth="141.0" text="Start">
+                     <opaqueInsets>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </opaqueInsets>
+                  </Button>
+                  <Button id="btnLoad" fx:id="btnStop" mnemonicParsing="false" onAction="#handleBtnStopAction" prefHeight="27.0" prefWidth="141.0" text="Stop">
+                     <opaqueInsets>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </opaqueInsets>
+                  </Button>
                     </buttons>
                 </ButtonBar>
             </children>
@@ -39,4 +51,28 @@
             </center>
         </BorderPane>
     </center>
+   <bottom>
+      <HBox prefHeight="30.0" prefWidth="1091.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Image duration">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Label>
+            <Slider fx:id="sliderImageDuration"  onMouseDragged="#onDelaySet" majorTickUnit="5.0" max="5.0" min="1.0" minorTickCount="5" snapToTicks="true">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </Slider>
+            <Label fx:id="lblDurationSeconds" text="1" />
+            <Label text=" Second(s)" />
+            <Label text="Filename:  ">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="lblFileName" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
