--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -7,31 +7,28 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="703.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.ImageViewerWindowController">
     <top>
         <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="1091.0" BorderPane.alignment="CENTER">
             <children>
-                <ButtonBar prefHeight="57.0" prefWidth="727.0">
+                <ButtonBar prefHeight="57.0" prefWidth="458.0">
                     <buttons>
                         <Button id="btnLoad" fx:id="btnLoad" mnemonicParsing="false" onAction="#handleBtnLoadAction" prefHeight="27.0" prefWidth="141.0" text="Load images...">
                             <opaqueInsets>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </opaqueInsets>
                         </Button>
-                        <Button id="btnPrevious" fx:id="btnPrevious" mnemonicParsing="false" onAction="#handleBtnPreviousAction" text="Previous">
-                            <opaqueInsets>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </opaqueInsets>
-                        </Button>
-                        <Button id="btnNext" fx:id="btnNext" mnemonicParsing="false" onAction="#handleBtnNextAction" text="Next" />
-                  <Button id="btnLoad" fx:id="btnStart" mnemonicParsing="false" onAction="#handleBtnStartAction" prefHeight="27.0" prefWidth="141.0" text="Start">
+                  <Button id="btnLoad" fx:id="btnStart" mnemonicParsing="false" onAction="#handleBtnStartAction" prefHeight="27.0" prefWidth="141.0" text="Start Slideshow">
                      <opaqueInsets>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </opaqueInsets>
                   </Button>
-                  <Button id="btnLoad" fx:id="btnStop" mnemonicParsing="false" onAction="#handleBtnStopAction" prefHeight="27.0" prefWidth="141.0" text="Stop">
+                  <Button id="btnLoad" fx:id="btnStop" mnemonicParsing="false" onAction="#handleBtnStopAction" prefHeight="27.0" prefWidth="141.0" text="Stop Slideshow">
                      <opaqueInsets>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </opaqueInsets>
@@ -52,27 +49,57 @@
         </BorderPane>
     </center>
    <bottom>
-      <HBox prefHeight="30.0" prefWidth="1091.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="43.0" prefWidth="1091.0" style="-fx-background-color: #303030;" BorderPane.alignment="CENTER">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Label text="Image duration">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </Label>
-            <Slider fx:id="sliderImageDuration"  onMouseDragged="#onDelaySet" majorTickUnit="5.0" max="5.0" min="1.0" minorTickCount="5" snapToTicks="true">
-               <HBox.margin>
-                  <Insets left="5.0" />
-               </HBox.margin>
-            </Slider>
-            <Label fx:id="lblDurationSeconds" text="1" />
-            <Label text=" Second(s)" />
-            <Label text="Filename:  ">
-               <HBox.margin>
-                  <Insets left="30.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="lblFileName" />
+            <HBox maxWidth="-Infinity" prefHeight="43.0" prefWidth="706.0" style="-fx-background-color: #303030;">
+               <children>
+                  <Label style="-fx-text-fill: #f8f8f8;" text="Image duration">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Slider fx:id="sliderImageDuration" majorTickUnit="5.0" max="5.0" min="1.0" minorTickCount="0" snapToTicks="true">
+                     <HBox.margin>
+                        <Insets left="5.0" top="2.0" />
+                     </HBox.margin>
+                  </Slider>
+                  <Label fx:id="lblDurationSeconds" style="-fx-text-fill: #f8f8f8;" text="1">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label style="-fx-text-fill: #f8f8f8;" text=" Second(s)" />
+                  <Label style="-fx-text-fill: #f8f8f8;" text="Filename:  ">
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="lblFileName" style="-fx-text-fill: #f8f8f8;" />
+               </children>
+               <padding>
+                  <Insets top="12.0" />
+               </padding>
+            </HBox>
+            <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="254.0" GridPane.halignment="RIGHT">
+               <children>
+                        <Button id="btnPrevious" fx:id="btnPrevious" mnemonicParsing="false" onAction="#handleBtnPreviousAction" prefHeight="25.0" prefWidth="50.0" text="&lt;-">
+                            <opaqueInsets>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </opaqueInsets>
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                        </Button>
+                        <Button id="btnNext" fx:id="btnNext" mnemonicParsing="false" onAction="#handleBtnNextAction" prefHeight="25.0" prefWidth="50.0" text="-&gt;" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </GridPane>
    </bottom>
 </BorderPane>
