--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -57,7 +57,16 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <HBox maxWidth="-Infinity" prefHeight="43.0" prefWidth="706.0" style="-fx-background-color: #303030;">
+            <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="43.0" prefWidth="437.0" GridPane.halignment="CENTER">
+               <children>
+                  <Label prefHeight="43.0" prefWidth="61.0" style="-fx-text-fill: #f8f8f8;" text="Filename:  " textFill="#f8f8f8" />
+                  <Label fx:id="lblFileName" prefHeight="44.0" prefWidth="378.0" style="-fx-text-fill: #f8f8f8;" />
+               </children>
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </HBox>
+            <HBox maxWidth="-Infinity" prefHeight="43.0" prefWidth="706.0">
                <children>
                   <Label style="-fx-text-fill: #f8f8f8;" text="Image duration">
                      <HBox.margin>
@@ -75,12 +84,6 @@
                      </HBox.margin>
                   </Label>
                   <Label style="-fx-text-fill: #f8f8f8;" text=" Second(s)" />
-                  <Label style="-fx-text-fill: #f8f8f8;" text="Filename:  ">
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label fx:id="lblFileName" style="-fx-text-fill: #f8f8f8;" />
                </children>
                <padding>
                   <Insets top="12.0" />
