--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.AreaChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -49,7 +53,7 @@
         </BorderPane>
     </center>
    <bottom>
-      <GridPane prefHeight="43.0" prefWidth="1091.0" style="-fx-background-color: #303030;" BorderPane.alignment="CENTER">
+      <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="43.0" prefWidth="1091.0" style="-fx-background-color: #303030;" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
@@ -105,4 +109,18 @@
          </children>
       </GridPane>
    </bottom>
+   <right>
+      <AnchorPane prefHeight="603.0" prefWidth="196.0" BorderPane.alignment="CENTER">
+         <children>
+            <AreaChart fx:id="areaChartColors" layoutX="4.0" layoutY="8.0" prefHeight="591.0" prefWidth="263.0" title="Color Chart">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </AreaChart>
+         </children>
+      </AnchorPane>
+   </right>
 </BorderPane>
