--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.AreaChart?>
+<?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
@@ -64,7 +64,7 @@
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="43.0" prefWidth="437.0" GridPane.halignment="CENTER">
                <children>
                   <Label prefHeight="43.0" prefWidth="61.0" style="-fx-text-fill: #f8f8f8;" text="Filename:  " textFill="#f8f8f8" />
-                  <Label fx:id="lblFileName" prefHeight="44.0" prefWidth="378.0" style="-fx-text-fill: #f8f8f8;" />
+                  <Label fx:id="lblFileName" prefHeight="44.0" prefWidth="378.0" style="-fx-text-fill: #f8f8f8;" text="Name" />
                </children>
                <GridPane.margin>
                   <Insets left="50.0" />
@@ -110,16 +110,16 @@
       </GridPane>
    </bottom>
    <right>
-      <AnchorPane prefHeight="603.0" prefWidth="196.0" BorderPane.alignment="CENTER">
+      <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="327.0" BorderPane.alignment="CENTER">
          <children>
-            <AreaChart fx:id="areaChartColors" layoutY="189.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="316.0" title="Color Chart" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="0.0">
+            <BarChart fx:id="chartColors" layoutX="73.0" layoutY="188.0" prefHeight="571.0" prefWidth="324.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="7.0">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
               <yAxis>
                 <NumberAxis side="LEFT" />
               </yAxis>
-            </AreaChart>
+            </BarChart>
          </children>
       </AnchorPane>
    </right>
