To fix - Bar width
Maybe put data back in a single series

--- a/src/dk/easv/style.css
+++ b/src/dk/easv/style.css
@@ -25,6 +25,13 @@
     -fx-text-fill: #f8f8f8;
 }
 
+.chart-vertical-grid-lines {
+    -fx-stroke: #707070;
+}
+.chart-horizontal-grid-lines {
+    -fx-stroke: #707070;
+}
+
 
 
 .button {
