--- a/src/dk/easv/ImageViewerWindow.fxml
+++ b/src/dk/easv/ImageViewerWindow.fxml
@@ -93,9 +93,9 @@
                   <Insets top="12.0" />
                </padding>
             </HBox>
-            <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="254.0" GridPane.halignment="RIGHT">
+            <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="107.0" GridPane.halignment="RIGHT">
                <children>
-                        <Button id="btnPrevious" fx:id="btnPrevious" mnemonicParsing="false" onAction="#handleBtnPreviousAction" prefHeight="25.0" prefWidth="50.0" text="&lt;-">
+                        <Button id="btnPrevious" fx:id="btnPrevious" mnemonicParsing="false" onAction="#handleBtnPreviousAction" prefHeight="30.0" prefWidth="18.0" text="❰">
                             <opaqueInsets>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </opaqueInsets>
@@ -103,16 +103,16 @@
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                         </Button>
-                        <Button id="btnNext" fx:id="btnNext" mnemonicParsing="false" onAction="#handleBtnNextAction" prefHeight="25.0" prefWidth="50.0" text="-&gt;" />
+                        <Button id="btnNext" fx:id="btnNext" mnemonicParsing="false" onAction="#handleBtnNextAction" prefHeight="30.0" prefWidth="0.0" text="❱" />
                </children>
             </HBox>
          </children>
       </GridPane>
    </bottom>
    <right>
-      <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="327.0" style="-fx-background-color: #353535;" BorderPane.alignment="CENTER">
+      <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="603.0" prefWidth="395.0" style="-fx-background-color: #353535;" BorderPane.alignment="CENTER">
          <children>
-            <BarChart fx:id="chartColors" layoutX="73.0" layoutY="188.0" prefHeight="571.0" prefWidth="324.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="7.0">
+            <BarChart fx:id="chartColors" barGap="1.0" categoryGap="1.0" layoutX="73.0" layoutY="188.0" legendVisible="false" prefHeight="571.0" prefWidth="391.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="7.0">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
